<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/ivArrowBackSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow_back"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:tint="@color/grey" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_your_naccount"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"/>

    <EditText
        android:id="@+id/etTextEmailAddressSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:textCursorDrawable="@null"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/rounded_background"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etTextPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:autofillHints="password"
        android:ems="10"
        android:textCursorDrawable="@null"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/rounded_background"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/etTextConfirmPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:autofillHints="password"
        android:ems="10"
        android:textCursorDrawable="@null"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/rounded_background"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        tools:ignore="LabelFor" />

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue_700"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnSignUpSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/btn_primary"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"/>

    <TextView
        android:id="@+id/tvSignInSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_into_your_account"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textColor="@color/blue_500"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"/>

</LinearLayout>